[tool.poetry]
name = "asciibadapple"
version = "0.1.0"
description = ""
authors = ["nobody5050 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
image = "^1.5.33"
opencv-python = "^4.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
